--- a/google-homepage.html
+++ b/google-homepage.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="https://www.google.com/intl/en/about/?fg=1&utm_source=google.com&utm_medium=referral&utm_campaign=hp-header">About</a></li>
-      <li><a href="https://store.google.com/?utm_source=hp_header&utm_medium=google_oo&utm_campaign=GS100042">Store</a></li>
-      <li><a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a></li>
-      <li><a href="https://www.google.com/imghp?hl=en&tab=wi">Images</a></li>
+      <li class="Left1"><a href="https://www.google.com/intl/en/about/?fg=1&utm_source=google.com&utm_medium=referral&utm_campaign=hp-header">About</a></li>
+      <li class="left2"><a href="https://store.google.com/?utm_source=hp_header&utm_medium=google_oo&utm_campaign=GS100042">Store</a></li>
+      <li class="right1"><a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a></li>
+      <li class="right2"><a href="https://www.google.com/imghp?hl=en&tab=wi">Images</a></li>
     </ul>
     <img src="googlelogo.png">
     <form>
