I don't know, Stuff!

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -18,4 +18,13 @@
       <button type="button">I'm Feeling Lucky</button>
     </form>
   </body>
+  <footer>
+    <ul>
+      <li>Advertising</li>
+      <li>Business</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>Settings</li>
+    </ul>
+  </footer>
 </html>
