Add more stuffs

--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+      <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Google Homepage Test</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  </head>
+    </head>
   <body>
-    <ul>
-      <li class="Left1"><a href="https://www.google.com/intl/en/about/?fg=1&utm_source=google.com&utm_medium=referral&utm_campaign=hp-header">About</a></li>
-      <li class="left2"><a href="https://store.google.com/?utm_source=hp_header&utm_medium=google_oo&utm_campaign=GS100042">Store</a></li>
-      <li class="right1"><a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a></li>
-      <li class="right2"><a href="https://www.google.com/imghp?hl=en&tab=wi">Images</a></li>
-    </ul>
+    <nav class="nav-bar">
+      <ul class="nbl">
+        <li><a href="https://www.google.com/intl/en/about/?fg=1&utm_source=google.com&utm_medium=referral&utm_campaign=hp-header">About</a></li>
+        <li><a href="https://store.google.com/?utm_source=hp_header&utm_medium=google_oo&utm_campaign=GS100042">Store</a></li>
+      </ul>
+      <ul class="nbr">
+        <li><a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a></li>
+        <li><a href="https://www.google.com/imghp?hl=en&tab=wi">Images</a></li>
+      </ul>
+
+    </nav>
     <img src="googlelogo.png">
     <form>
       <input type="text"></input><br>
