Change align and float of top elements.

--- a/Index.html
+++ b/Index.html
@@ -15,11 +15,10 @@
         <li><a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a></li>
         <li><a href="https://www.google.com/imghp?hl=en&tab=wi">Images</a></li>
       </ul>
-
     </nav>
     <img src="googlelogo.png">
     <form>
-      <input type="text"></input><br>
+      <input type="text"></input><br><br>
       <button type="button">Google Search</button>
       <button type="button">I'm Feeling Lucky</button>
     </form>
