--- a/Index.html
+++ b/Index.html
@@ -14,22 +14,32 @@
       <ul class="nbr">
         <li><a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Gmail</a></li>
         <li><a href="https://www.google.com/imghp?hl=en&tab=wi">Images</a></li>
+        <li><img class="navimage" src="googleapp.png"></li>
+        <li><img class="navimage" src="googlebell.png"></li>
+        <li><img class="navimage" src="googlec.png"></li>
+
       </ul>
     </nav>
-    <img src="googlelogo.png">
+    <img id="logo" src="googlelogo.png">
     <form>
-      <input type="text"></input><br><br>
+      <input type="text" class="search"></input><br><br>
       <button type="button">Google Search</button>
       <button type="button">I'm Feeling Lucky</button>
     </form>
+    <br>
+    <p><a id="doodle" href="google.com">Experience today's Doodle</a> in virtual reality</p>
   </body>
   <footer>
-    <ul>
-      <li>Advertising</li>
-      <li>Business</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>Settings</li>
-    </ul>
+    <div class="bottom">
+      <ul class="bl">
+        <li>Advertising</li>
+        <li>Business</li>
+      </ul>
+      <ul class="br">
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>Settings</li>
+        </ul>
+    </div>
   </footer>
 </html>
